...
  const { top } = useSafeAreaInsets();
  const messages = isDev ? DEVELOPMENT_MESSAGES : DEFAULT_MESSAGES;

  return (
    <Portal>
      <ToastWrapper
        testID="network-toast"
        entering={FadeInDown.duration(220)}
        exiting={FadeOutUp.duration(180)}
        safeTop={top}
      >
        <ToastRow status={status}>
          <MaterialCommunityIcons
...
