...
  onSave,
  onDelete,
}: ObservationFormScreenProps) => {
  const theme = useTheme();
  const [deleteSheetOpen, setDeleteSheetOpen] = useState(false);
  const [newClassSheetOpen, setNewClassSheetOpen] = useState(false);
  const title = mode === 'create' ? 'Nova observação' : 'Editar observação';

  return (
    <ScreenContainer withBottom>
      <AppHeader
        mode="navigation"
        title={title}
...
